src/styles/global.scss
@use "reset.scss";
@use "typography.scss";
@use "media.scss" as *;

:root {
  --orange-120: #e87928;
  --orange-100: #ff8b37;
  --orange-80: #ffac70;
  --orange-5: #fff3eb;
  --green-100: #47d867;
  --green-5: #e6faea;
  --red-100: #ec6259;
  --red-5: #fdeeed;
  --black-100: #1c1c21;
  --black-40: #d0d0d8;
  --black-5: #f5f5f7;
  --white-100: #ffffff;
}

body {
  font-family: Inter, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.container {
  max-width: 100%;
  padding: 0 16px;

  @include desktop {
    max-width: 1440px;
    margin: 0 auto;
    padding: 0 80px;
  }
}

